feat(authorization-manager): enhance UI components and integrate timeago.js for device last seen timestamps

--- a/native/hub/src/server/panel/src/app.html
+++ b/native/hub/src/server/panel/src/app.html
@@ -4,6 +4,11 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<style>
+			body {
+				background: rgb(250, 250, 250);
+			}
+		</style>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
